Sonar Code Smells Cleanup (Redundant casts, simple class names, Stream.toList()) (#2024)
* Code smell updates

* Fix unit tests